TestGITProcess/force-app/main/default/objects/Time_Sheet__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Exploration</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Homework</fullName>
            </value>
            <value>
                <fullName>Class</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Prayer</fullName>
            </value>
            <value>
                <fullName>Visitor</fullName>
            </value>
            <value>
                <fullName>Newspaper Reading</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Documentation / Review</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Practice</fullName>
            </value>
            <value>
                <fullName>Mentoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>