TestGITProcess/force-app/main/default/objects/Time_Sheet__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Time Sheet</relationshipLabel>
    <relationshipName>Time_Sheet</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>