TestGITProcess/force-app/main/default/objects/Time_Sheet__c/validationRules/Activity_and_Category_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_and_Category_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(NOT(ISBLANK(TEXT( Activity__c))) , NOT(ISBLANK(TEXT(Absence_Category__c)))),AND(ISBLANK(TEXT( Activity__c)) , ISBLANK(TEXT(Absence_Category__c))) )</errorConditionFormula>
    <errorMessage>Both Activity and Category cannot be filled, only one of them can be selected.</errorMessage>
</ValidationRule>