TestGITProcess/force-app/main/default/objects/Time_Sheet__c/validationRules/Duration_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Hours_Exceeded__c = true</errorConditionFormula>
    <errorMessage>Duration Entered for today has exceeded 24 hours</errorMessage>
</ValidationRule>