TestGITProcess/force-app/main/default/objects/Time_Sheet__c/validationRules/Eight_hour_limit_for_out_of_office.validationRule-meta.xml
<ValidationRule>
    <fullName>Eight_hour_limit_for_out_of_office</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL( Absence_Category__c , &quot;Sick Leave&quot;),
ISPICKVAL( Absence_Category__c , &quot;PTO-Planned&quot;), 
ISPICKVAL(Absence_Category__c ,&quot;PTO-Un Planned&quot;)),
Duration__c &gt; 8)</errorConditionFormula>
    <errorMessage>Enter 8 hours or Less when Project is out of office</errorMessage>
</ValidationRule>