TestGITProcess/force-app/main/default/objects/Time_Sheet__c/validationRules/In_Time_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Time_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(AND(ISPICKVAL(Absence_Category__c ,&quot;In Time&quot;), Project__r.Name  = &quot;Office Time&quot;),
ISBLANK(Start_Time__c))</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>Please Enter Start Time</errorMessage>
</ValidationRule>