TestGITProcess/force-app/main/default/objects/Time_Sheet__c/validationRules/Out_of_Office_and_Category_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Out_of_Office_and_Category_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( CONTAINS( Project__r.Name , &quot;Out of Office&quot;) , NOT(ISBLANK(TEXT(Activity__c))))</errorConditionFormula>
    <errorMessage>When Project is Out of Office Category must be selected.</errorMessage>
</ValidationRule>