TestGITProcess/force-app/main/default/objects/Time_Sheet__c/validationRules/Out_Time_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Out_Time_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(AND(ISPICKVAL(Absence_Category__c ,&quot;Out Time&quot;), Project__r.Name = &quot;Office Time&quot;),
ISBLANK(End_Time__c))</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>Please will End Time</errorMessage>
</ValidationRule>