TestGITProcess/force-app/main/default/objects/Time_Sheet__c/validationRules/Restrict_TimesheetEntry_before_28_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_TimesheetEntry_before_28_days</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR( ISNEW(), ISCHANGED( Date__c )), Date__c  &lt;=( TODAY()  -   MOD( TODAY()  -  DATE(2022,11,20),7 ) -  $CustomMetadata.Time_Sheet_Values__mdt.Default_Value.Locking_record_days__c))</errorConditionFormula>
    <errorMessage>Records cannot be created or updated beyond the past four weeks</errorMessage>
</ValidationRule>