TestGITProcess/force-app/main/default/objects/Time_Sheet__c/listViews/Vairamuthu.listView-meta.xml
<ListView>
    <fullName>Vairamuthu</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Date__c</columns>
    <columns>Description__c</columns>
    <columns>Project__c</columns>
    <columns>Activity__c</columns>
    <columns>Absence_Category__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Duration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee__c</field>
        <operation>contains</operation>
        <value>Vairamuthu</value>
    </filters>
    <label>Vairamuthu</label>
    <sharedTo>
        <group>Manager_Group</group>
    </sharedTo>
</ListView>